--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   path_provider: ^2.1.5
   hive: ^2.2.3
   sqflite: ^2.4.1
+  lottie: ^3.1.3
 
 dev_dependencies:
   flutter_test:
@@ -39,6 +40,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
